@@ -4034,309 +4034,6 @@ tracker_db_get_files_by_mime (DBConnection *db_con, char **mimes, int n, int off
 }
 
 TrackerDBResultSet *
-tracker_db_search_text_mime (DBConnection *db_con, const char *text, char **mime_array)
-{
-	TrackerQueryTree *tree;
-	TrackerDBResultSet *result;
-	GArray       *hits;
-	GSList 	     *result_list;
-	guint        i;
-	int 	     count;
-	gint         service_array[8];
-	GArray       *services;
-
-	result = NULL;
-	result_list = NULL;
-
-	service_array[0] = tracker_ontology_get_id_for_service_type ("Files");
-	service_array[1] = tracker_ontology_get_id_for_service_type ("Folders");
-	service_array[2] = tracker_ontology_get_id_for_service_type ("Documents");
-	service_array[3] = tracker_ontology_get_id_for_service_type ("Images");
-	service_array[4] = tracker_ontology_get_id_for_service_type ("Music");
-	service_array[5] = tracker_ontology_get_id_for_service_type ("Videos");
-	service_array[6] = tracker_ontology_get_id_for_service_type ("Text");
-	service_array[7] = tracker_ontology_get_id_for_service_type ("Other");
-
-	services = g_array_new (TRUE, TRUE, sizeof (gint));
-	g_array_append_vals (services, service_array, 8);
-
-	tree = tracker_query_tree_new (text, 
-				       db_con->word_index, 
-				       tracker->config,
-				       tracker->language,
-				       services);
-	hits = tracker_query_tree_get_hits (tree, 0, 0);
-	count = 0;
-
-	for (i = 0; i < hits->len; i++) {
-		TrackerDBResultSet *result_set;
-		TrackerSearchHit hit;
-		char *str_id, *mimetype;
-
-		hit = g_array_index (hits, TrackerSearchHit, i);
-
-		str_id = tracker_uint_to_string (hit.service_id);
-
-		result_set = tracker_exec_proc (db_con, "GetFileByID", str_id, NULL);
-
-		g_free (str_id);
-
-		if (result_set) {
-			tracker_db_result_set_get (result_set, 2, &mimetype, -1);
-
-			if (tracker_string_in_string_list (mimetype, mime_array) != -1) {
-				GValue value = { 0, };
-
-				if (G_UNLIKELY (!result)) {
-					result = _tracker_db_result_set_new (2);
-				}
-
-				_tracker_db_result_set_append (result);
-
-				/* copy value in column 0 */
-				_tracker_db_result_set_get_value (result_set, 0, &value);
-				_tracker_db_result_set_set_value (result, 0, &value);
-				g_value_unset (&value);
-
-				/* copy value in column 1 */
-				_tracker_db_result_set_get_value (result_set, 1, &value);
-				_tracker_db_result_set_set_value (result, 1, &value);
-				g_value_unset (&value);
-
-				count++;
-			}
-
-			g_free (mimetype);
-			g_object_unref (result_set);
-		}
-
-		if (count > 2047) {
-			break;
-		}
-	}
-
-	g_object_unref (tree);
-	g_array_free (hits, TRUE);
-	g_array_free (services, TRUE);
-
-	if (!result)
-		return NULL;
-
-	if (tracker_db_result_set_get_n_rows (result) == 0) {
-		g_object_unref (result);
-		return NULL;
-	}
-
-	tracker_db_result_set_rewind (result);
-
-	return result;
-}
-
-TrackerDBResultSet *
-tracker_db_search_text_location (DBConnection *db_con, const char *text, const char *location)
-{
-	TrackerDBResultSet *result;
-	TrackerQueryTree *tree;
-	GArray       *hits;
-	char	     *location_prefix;
-	int 	     count;
-	gint         service_array[8];
-	guint        i;
-	GArray       *services;
-
-	location_prefix = g_strconcat (location, G_DIR_SEPARATOR_S, NULL);
-
-	service_array[0] = tracker_ontology_get_id_for_service_type ("Files");
-	service_array[1] = tracker_ontology_get_id_for_service_type ("Folders");
-	service_array[2] = tracker_ontology_get_id_for_service_type ("Documents");
-	service_array[3] = tracker_ontology_get_id_for_service_type ("Images");
-	service_array[4] = tracker_ontology_get_id_for_service_type ("Music");
-	service_array[5] = tracker_ontology_get_id_for_service_type ("Videos");
-	service_array[6] = tracker_ontology_get_id_for_service_type ("Text");
-	service_array[7] = tracker_ontology_get_id_for_service_type ("Other");
-
-	services = g_array_new (TRUE, TRUE, sizeof (gint));
-	g_array_append_vals (services, service_array, 8);
-
-	tree = tracker_query_tree_new (text, 
-				       db_con->word_index, 
-				       tracker->config,
-				       tracker->language,
-				       services);
-	hits = tracker_query_tree_get_hits (tree, 0, 0);
-	count = 0;
-
-	for (i = 0; i < hits->len; i++) {
-		TrackerDBResultSet *result_set;
-		TrackerSearchHit hit;
-		char *str_id, *path;
-
-		hit = g_array_index (hits, TrackerSearchHit, i);
-
-		str_id = tracker_uint_to_string (hit.service_id);
-
-		result_set = tracker_exec_proc (db_con, "GetFileByID", str_id, NULL);
-
-		g_free (str_id);
-
-		if (result_set) {
-			tracker_db_result_set_get (result_set, 0, &path, -1);
-
-			if (g_str_has_prefix (path, location_prefix) || (strcmp (path, location) == 0)) {
-				GValue value = { 0, };
-
-				if (G_UNLIKELY (!result)) {
-					result = _tracker_db_result_set_new (2);
-				}
-
-				_tracker_db_result_set_append (result);
-
-				/* copy value in column 0 */
-				_tracker_db_result_set_get_value (result_set, 0, &value);
-				_tracker_db_result_set_set_value (result, 0, &value);
-				g_value_unset (&value);
-
-				/* copy value in column 1 */
-				_tracker_db_result_set_get_value (result_set, 1, &value);
-				_tracker_db_result_set_set_value (result, 1, &value);
-				g_value_unset (&value);
-
-				count++;
-			}
-
-			g_object_unref (result_set);
-		}
-
-		if (count > 2047) {
-			break;
-		}
-	}
-
-	g_free (location_prefix);
-
-	g_object_unref (tree);
-	g_array_free (hits, TRUE);
-	g_array_free (services, TRUE);
-
-	if (!result)
-		return NULL;
-
-	if (tracker_db_result_set_get_n_rows (result) == 0) {
-		g_object_unref (result);
-		return NULL;
-	}
-
-	tracker_db_result_set_rewind (result);
-
-	return result;
-}
-
-TrackerDBResultSet *
-tracker_db_search_text_mime_location (DBConnection *db_con, const char *text, char **mime_array, const char *location)
-{
-	TrackerDBResultSet *result;
-	TrackerQueryTree *tree;
-	GArray       *hits;
-	char	     *location_prefix;
-	int	     count;
-	gint         service_array[8];
-	guint        i;
-	GArray       *services;
-
-	location_prefix = g_strconcat (location, G_DIR_SEPARATOR_S, NULL);
-
-	service_array[0] = tracker_ontology_get_id_for_service_type ("Files");
-	service_array[1] = tracker_ontology_get_id_for_service_type ("Folders");
-	service_array[2] = tracker_ontology_get_id_for_service_type ("Documents");
-	service_array[3] = tracker_ontology_get_id_for_service_type ("Images");
-	service_array[4] = tracker_ontology_get_id_for_service_type ("Music");
-	service_array[5] = tracker_ontology_get_id_for_service_type ("Videos");
-	service_array[6] = tracker_ontology_get_id_for_service_type ("Text");
-	service_array[7] = tracker_ontology_get_id_for_service_type ("Other");
-
-	services = g_array_new (TRUE, TRUE, sizeof (gint));
-	g_array_append_vals (services, service_array, 8);
-
-	tree = tracker_query_tree_new (text, 
-				       db_con->word_index, 
-				       tracker->config,
-				       tracker->language,
-				       services);
-	hits = tracker_query_tree_get_hits (tree, 0, 0);
-	count = 0;
-
-	for (i = 0; i < hits->len; i++) {
-		TrackerDBResultSet *result_set;
-		TrackerSearchHit hit;
-		char *str_id, *path, *mimetype;
-
-		hit = g_array_index (hits, TrackerSearchHit, i);
-
-		str_id = tracker_uint_to_string (hit.service_id);
-
-		result_set = tracker_exec_proc (db_con, "GetFileByID", str_id, NULL);
-
-		g_free (str_id);
-
-		if (result_set) {
-			tracker_db_result_set_get (result_set,
-						   0, &path,
-						   2, &mimetype,
-						   -1);
-
-			if ((g_str_has_prefix (path, location_prefix) || (strcmp (path, location) == 0)) &&
-			    tracker_string_in_string_list (mimetype, mime_array) != -1) {
-				GValue value = { 0, };
-
-				if (G_UNLIKELY (!result)) {
-					result = _tracker_db_result_set_new (2);
-				}
-
-				_tracker_db_result_set_append (result);
-
-				/* copy value in column 0 */
-				_tracker_db_result_set_get_value (result_set, 0, &value);
-				_tracker_db_result_set_set_value (result, 0, &value);
-				g_value_unset (&value);
-
-				/* copy value in column 1 */
-				_tracker_db_result_set_get_value (result_set, 1, &value);
-				_tracker_db_result_set_set_value (result, 1, &value);
-				g_value_unset (&value);
-
-				count++;
-			}
-
-			g_free (path);
-			g_free (mimetype);
-			g_object_unref (result_set);
-		}
-
-		if (count > 2047) {
-			break;
-		}
-	}
-
-	g_free (location_prefix);
-
-	g_object_unref (tree);
-	g_array_free (hits, TRUE);
-	g_array_free (services, TRUE);
-
-	if (!result)
-		return NULL;
-
-	if (tracker_db_result_set_get_n_rows (result) == 0) {
-		g_object_unref (result);
-		return NULL;
-	}
-
-	tracker_db_result_set_rewind (result);
-
-	return result;
-}
-
-TrackerDBResultSet *
 tracker_db_get_metadata_types (DBConnection *db_con, const char *class, gboolean writeable)
 {
 	if (strcmp (class, "*") == 0) {
